install pm2 using shell

--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -14,9 +14,14 @@
 - name: "install dependencies."
   become: yes
   apt:
-    name: ["nodejs", "npm","pm2"]
+    name: ["nodejs", "npm"]
     state: latest
     update_cache: yes
+    
+- name: "install pm2"
+  become: yes
+  shell: npm install pm2 -g && pm2 update
+    
     
 - name: Creates directory
   file:
